# Hackatown2020

./: Logo.psd  Logo_Rose.psd
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/ca/teamrocket/polyeats/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/ca/teamrocket/polyeats/: IndoorMapActivity.kt  MainActivity.kt
Android/app/src/main/res/drawable/: ic_veg_black_24dp.xml
Android/app/src/main/res/layout/: activity_indoor_map.xml  activity_resto.xml  content_indoor_map.xml  fragment_foodoption.xml  fragment_foodoption_list.xml  fragment_history.xml  fragment_menuitem.xml  fragment_menuitem_list.xml  fragment_popup_menu_item.xml  fragment_resto.xml  fragment_resto_list.xml  fragment_search.xml
Android/app/src/main/res/navigation/: mobile_navigation.xml
Android/app/src/main/res/values/: colors.xml  strings.xml
Android/gradle/wrapper/: gradle-wrapper.properties
PolyEATS/: settings.gradle
PolyEATS/app/: build.gradle
PolyEATS/app/src/main/: AndroidManifest.xml
PolyEATS/app/src/main/res/layout/: fragment_history.xml  fragment_resto_list.xml  fragment_search.xml
PolyEATS/app/src/main/res/menu/: bottom_nav_menu.xml
PolyEATS/app/src/main/res/navigation/: mobile_navigation.xml
PolyEATS/app/src/main/res/values/: strings.xml
PolyEATS/gradle/wrapper/: gradle-wrapper.properties
server/: .gitignore  Cargo.toml  gitignore
server/src/: main.rs  model.rs  routes.rs  utf8_middleware.rs
server/src/resources/: index.html
(+43 files in other folders)
