[package]
name = "server"
version = "0.1.0"
authors = ["Arnaud Paré-Vogt <arnaud.parevogt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotham = "0.4.0"
gotham_derive = "0.4.0"
hyper = "0.12"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1"
chrono = { version = "0.4", features = ["serde"] }
